Prevent policy page date from wrapping mid-line.

--- a/r2/r2/public/static/css/policies.less
+++ b/r2/r2/public/static/css/policies.less
@@ -38,11 +38,15 @@
                 }
             }
 
+            strong {
+                margin-right: .5em;
+            }
+
             em {
                 font-size: .60em;
                 font-style: normal;
-                padding-left: 1em;
                 color: #777;
+                white-space: nowrap;
             }
         }
 
